test/langtools/tools/javac/enhanced_enums/NoDiamondAllowedTest.out
NoDiamondAllowedTest.java:9:7: compiler.err.illegal.start.of.type
1 error
